docs: documentar flag de acceso nativo